Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8249

Potential deadlock in lnet

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      While testing a patch I was able to deadlock all the CPU of my machine.
      After investigating the log reports I found out that in "LNetMDAttach" (implemented in lnet/lnet/lib-md.c) there is a call to the "vfree" function in interrupt context which is illegal in linux kernel versions prior to 3.10.

      I cannot be sure whether or not this was actually the cause of my problem though, because I have not been able to reproduce since then.

            doug Doug Oucharek (Inactive)
            cealustre CEA
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: